# kind2-archive

./: .gitignore  Cargo.toml  Makefile  README.md  SYNTAX.md  TODO  bend.hvml  bootstrap.hvm1  bootstrap.js  build.rs  como_rodar.md  kind2.hvm1  kind2.hvm2  kind2.ts  kjfsadkfj.bend  main.ts  package.json
book/: .check.hvm1  .fill.tmp  A.kind2  A.succ.kind2  A.zero.kind2  B.kind2  BBT.balance.kind2  BBT.balance.lft_heavier.kind2  BBT.balance.rgt_heavier.kind2  BBT.bin.kind2  BBT.from_list.kind2  BBT.get.kind2  BBT.got.kind2  BBT.got_size.kind2  BBT.has.kind2  BBT.has.linear.kind2  BBT.kind2  BBT.lft_rotate.kind2  BBT.new_node.kind2  BBT.rgt_rotate.kind2  BBT.set.kind2  BBT.singleton.kind2  BBT.tip.kind2  BBT.to_list.kind2  BMap.kind2  Bits.kind2  Bool.and.kind2  Bool.bend  Bool.false.kind2  Bool.if.kind2  Bool.kind2  Bool.lemma.notnot.kind2  Bool.match.kind2  Bool.not.kind2  Bool.or.kind2  Bool.show.kind2  Bool.true.kind2  CNat.kind2  CNat.succ.kind2  CNat.zero.kind2  (+358 more)
book/.hvm/: Cargo.toml
book/.hvm/src/: fns.rs
book/App/: _.kind2  new.kind2
book/BBT/: balance.kind2  bin.kind2  from_list.kind2  get.kind2  got.kind2  got_size.kind2  has.kind2  lft_rotate.kind2  new_node.kind2  rgt_rotate.kind2  set.kind2  singleton.kind2  tip.kind2  to_list.kind2
book/BMap/: _.kind2  from_list.kind2  get.kind2  got.kind2  got_size.kind2  has.kind2  leaf.kind2  match.kind2  node.kind2  set.kind2  size.kind2  to_list.kind2
book/Bits/: E.kind2  (+11 more)
docs/: equality.md
formal/: README.md  kind2.agda
src/: kind2.hs  kind2.hvm1  kind2.hvm2  kindc.hs  kindc.rs  main.kindc  main.rs
(+468 files in other folders)
