[package]
name = "hvm-core"
version = "0.2.18"
edition = "2021"
description = "HVM-Core is a massively parallel Interaction Combinator evaluator."
license = "MIT"

[[bin]]
name = "hvmc"
path = "src/main.rs"
bench = false

[lib]
name = "hvmc"
path = "src/lib.rs"
bench = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[features]
default = []
hvm_cli_options = []
lazy_mode = []

[dependencies]
nohash-hasher = "0.2.0"

